Added an option to set the album artist tag as the album name. This solves a problem on android where, if the albums have multiple artists, they will be split into several albums.

--- a/src/onthespot/gui/qtui/main.ui
+++ b/src/onthespot/gui/qtui/main.ui
@@ -877,6 +877,13 @@
                </widget>
               </item>
               <item>
+               <widget class="QCheckBox" name="inp_android_album_artist">
+                <property name="text">
+                 <string>Set album artist as album name</string>
+                </property>
+               </widget>
+              </item>
+              <item>
                <widget class="QCheckBox" name="inp_enable_spot_watch">
                 <property name="text">
                  <string>Enable desktop app play to download</string>
